--- a/food-project/src/index.css
+++ b/food-project/src/index.css
@@ -1,4 +1,4 @@
-/* :root {
+:root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -9,7 +9,7 @@
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
-  -we bkit-font-smoothing: antialiased;
+  -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
@@ -18,8 +18,8 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
-a:hover { */
-  color:#535bf2;
+a:hover {
+  color: #535bf2;
 }
 
 body {
